--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 image: alpine
 before_script:
-  - apk update && apk add git ssh
+  - apk update && apk add git openssh
   - mkdir -p ~/.ssh
   - echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
   - printf "Host *\n  IdentityFile ~/.ssh/id_rsa\n" > ~/.ssh/config
