--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ before_script:
   - apk update && apk add git openssh
   - mkdir -p ~/.ssh
   - echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-  - printf "Host *\n  IdentityFile ~/.ssh/id_rsa\n" > ~/.ssh/config
+  - printf "host github.com\n  HostName github.com\n  IdentityFile ~/.ssh/id_rsa\n  User git\n" > ~/.ssh/config
   - chmod -R 0600 ~/.ssh
 
 mirror:
